--- a/public/css/flappynerd.css
+++ b/public/css/flappynerd.css
@@ -43,16 +43,18 @@ body {
   z-index: 1;
 }
 
-#wrapper{
-  padding-top: 1em;
+#outerTable{
   width: 100%;
+  height: 100%;
   text-align: center;
 }
 
 #left, #right, #middle {
+  padding-top: 1em;
   margin-left: 0.5em;
   float: left;
   background: #FFAA23;
+  text-align: center;
 
   width: 23%;
 }
